// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField should match snapshot for value disabled: false, type: text, size: small and error: false 1`] = `
<input
  class="sc-gsnTZi kDUoyL"
  min="0"
  placeholder="placeholder"
  type="text"
  value="Test value"
/>
`;

exports[`TextField should match snapshot for value disabled: true, type: number, size: regular and error: true 1`] = `
<input
  class="sc-gsnTZi ervoET"
  disabled=""
  min="0"
  placeholder="placeholder"
  type="number"
  value="Test value"
/>
`;

exports[`TextField should match snapshot for value disabled: true, type: search, size: small and error: false 1`] = `
<input
  class="sc-gsnTZi hRijqP"
  disabled=""
  min="0"
  placeholder="placeholder"
  type="search"
  value="Test value"
/>
`;
